--- a/rewrite.conf
+++ b/rewrite.conf
@@ -5,7 +5,7 @@ listen 443;
 
 server_name domain.com;
 
-if ($scheme = http) {
+if ($scheme = https) {
 rewrite ^/$ https:/10.10.10.10 permanent;
 rewrite ^/resource2$ https:/20.20.20.20 permanent;
 }
